<resources>
    <string name="app_name">Calculator</string>
    <string name ="some_id">88888888888888</string>string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plusminus">+/-</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="ac">AC</string>
    <string name="divide">÷</string>
    <string name="multiplication">×</string>
    <string name="percent">%</string>
    <string name="equality">=</string>
    <string name="comma">,</string>
    <string name="firstAndLastChecks">..%s</string>
    <string name="lastCheckElse">%s%s</string>
    <string name="conclusionFirst">=%s..%s</string>
    <string name="conclusionSecond">=%s..</string>
    <string name="conclusionThird">=%s</string>
    <string name="checkSigns">%s%s</string>
    <string name="exceptionConfirmed">=/0</string>
    <string name="divideException">CAN\'T DIVIDE</string>
</resources>