<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="@style/titleStyle"
        app:layout_constraintBottom_toTopOf="@+id/rectangleView"
        app:layout_constraintStart_toStartOf="@id/startVerticalGuide"
        app:layout_constraintTop_toTopOf="@id/topHorizontalGuide"
        app:layout_constraintVertical_bias="0.45" />

    <View
        android:id="@+id/rectangleView"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/rectangle"
        app:layout_constraintEnd_toEndOf="@id/endVerticalGuide"
        app:layout_constraintStart_toStartOf="@id/startVerticalGuide"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <TextView
        android:id="@+id/constantText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:alpha="0.08"
        android:gravity="center"
        android:lines="1"
        android:text="@string/some_id"
        android:textAppearance="@style/forPad"
        app:layout_constraintBottom_toBottomOf="@id/rectangleView"
        app:layout_constraintEnd_toEndOf="@id/rectangleView"
        app:layout_constraintStart_toStartOf="@id/rectangleView"
        app:layout_constraintTop_toTopOf="@id/rectangleView" />

    <TextView
        android:id="@+id/padText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:gravity="center_vertical"
        android:lines="1"
        android:text="@string/zero"
        android:textAppearance="@style/forPad"
        app:layout_constraintBottom_toBottomOf="@id/constantText"
        app:layout_constraintEnd_toEndOf="@id/constantText"
        app:layout_constraintTop_toTopOf="@id/constantText" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupOfNumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:contextClickable="false"
        android:visibility="visible"
        app:constraint_referenced_ids="fiveButton,fourButton,oneButton,twoButton,threeButton,
        sixButton, sevenButton, eightButton, nineButton, zeroButton" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupOfOperations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clickOnOperation"
        android:visibility="visible"
        app:constraint_referenced_ids="plusButton,minusButton,multiplicationButton,divideButton" />

    <soup.neumorphism.NeumorphButton
        android:id="@+id/zeroButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/zero"
        android:textAppearance="@style/forButton"
        app:layout_constraintBottom_toBottomOf="@id/bottomHorizontalGuide"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintEnd_toStartOf="@+id/commaButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="@id/startVerticalGuide"
        app:layout_constraintTop_toBottomOf="@+id/oneButton"
        app:neumorph_shapeAppearance="@style/ButtonCorners" />

    <soup.neumorphism.NeumorphButton
        android:id="@+id/equalButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/equality"
        android:textAppearance="@style/forOperationButton"
        app:layout_constraintBottom_toBottomOf="@id/bottomHorizontalGuide"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/endVerticalGuide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/commaButton"
        app:layout_constraintTop_toBottomOf="@+id/plusButton"
        app:neumorph_backgroundColor="@color/ButtonText"
        app:neumorph_shapeAppearance="@style/ButtonCorners" />

    <soup.neumorphism.NeumorphButton
        android:id="@+id/commaButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/comma"
        android:textAppearance="@style/forButton"
        app:layout_constraintBottom_toBottomOf="@id/bottomHorizontalGuide"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/equalButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/zeroButton"
        app:layout_constraintTop_toBottomOf="@+id/threeButton"
        app:neumorph_shapeAppearance="@style/ButtonCorners" />

    <soup.neumorphism.NeumorphButton
        android:id="@+id/sevenButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/seven"
        android:textAppearance="@style/forButton"
        app:layout_constraintBottom_toTopOf="@+id/fourButton"
        app:layout_constraintEnd_toStartOf="@+id/eightButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/startVerticalGuide"
        app:layout_constraintTop_toBottomOf="@+id/acButton"
        app:neumorph_shapeAppearance="@style/ButtonCorners" />

    <soup.neumorphism.NeumorphButton
        android:id="@+id/fourButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/four"
        android:textAppearance="@style/forButton"
        app:layout_constraintBottom_toTopOf="@+id/oneButton"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/fiveButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/startVerticalGuide"
        app:layout_constraintTop_toBottomOf="@+id/sevenButton"
        app:neumorph_shapeAppearance="@style/ButtonCorners" />

    <soup.neumorphism.NeumorphButton
        android:id="@+id/oneButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/one"
        android:textAppearance="@style/forButton"
        app:layout_constraintBottom_toTopOf="@+id/zeroButton"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/twoButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/startVerticalGuide"
        app:layout_constraintTop_toBottomOf="@+id/fourButton"
        app:neumorph_shapeAppearance="@style/ButtonCorners" />

    <soup.neumorphism.NeumorphButton
        android:id="@+id/plusButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/plus"
        android:textAppearance="@style/forOperationButton"
        app:layout_constraintBottom_toTopOf="@+id/equalButton"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/endVerticalGuide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/threeButton"
        app:layout_constraintTop_toBottomOf="@+id/minusButton"
        app:neumorph_backgroundColor="@color/ButtonText"
        app:neumorph_shapeAppearance="@style/ButtonCorners" />

    <soup.neumorphism.NeumorphButton
        android:id="@+id/twoButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/two"
        android:textAppearance="@style/forButton"
        app:layout_constraintBottom_toTopOf="@+id/zeroButton"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/threeButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/oneButton"
        app:layout_constraintTop_toBottomOf="@+id/fiveButton"
        app:neumorph_shapeAppearance="@style/ButtonCorners" />

    <soup.neumorphism.NeumorphButton
        android:id="@+id/percentButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/percent"
        android:textAppearance="@style/forButton"
        app:layout_constraintBottom_toTopOf="@+id/nineButton"
        app:layout_constraintEnd_toStartOf="@+id/divideButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/plusminusButton"
        app:layout_constraintTop_toBottomOf="@+id/rectangleView"
        app:neumorph_shapeAppearance="@style/ButtonCorners" />

    <soup.neumorphism.NeumorphButton
        android:id="@+id/plusminusButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/plusminus"
        android:textAppearance="@style/forButton"
        app:layout_constraintBottom_toTopOf="@+id/eightButton"
        app:layout_constraintEnd_toStartOf="@+id/percentButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/acButton"
        app:layout_constraintTop_toBottomOf="@+id/rectangleView"
        app:neumorph_shapeAppearance="@style/ButtonCorners" />

    <soup.neumorphism.NeumorphButton
        android:id="@+id/multiplicationButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/multiplication"
        android:textAppearance="@style/forOperationButton"
        app:layout_constraintBottom_toTopOf="@+id/minusButton"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/endVerticalGuide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/nineButton"
        app:layout_constraintTop_toBottomOf="@+id/divideButton"
        app:neumorph_backgroundColor="@color/ButtonText"
        app:neumorph_shapeAppearance="@style/ButtonCorners" />

    <soup.neumorphism.NeumorphButton
        android:id="@+id/eightButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/eight"
        android:textAppearance="@style/forButton"
        app:layout_constraintBottom_toTopOf="@+id/fiveButton"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toStartOf="@+id/nineButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sevenButton"
        app:layout_constraintTop_toBottomOf="@+id/plusminusButton"
        app:neumorph_shapeAppearance="@style/ButtonCorners" />

    <soup.neumorphism.NeumorphButton
        android:id="@+id/divideButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/divide"
        android:textAppearance="@style/forOperationButton"
        app:layout_constraintBottom_toTopOf="@+id/multiplicationButton"
        app:layout_constraintEnd_toEndOf="@id/endVerticalGuide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/percentButton"
        app:layout_constraintTop_toBottomOf="@+id/rectangleView"
        app:neumorph_backgroundColor="@color/ButtonText"
        app:neumorph_shapeAppearance="@style/ButtonCorners" />

    <soup.neumorphism.NeumorphButton
        android:id="@+id/sixButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/six"
        android:textAppearance="@style/forButton"
        app:layout_constraintBottom_toTopOf="@+id/threeButton"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/minusButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fiveButton"
        app:layout_constraintTop_toBottomOf="@+id/nineButton"
        app:neumorph_shapeAppearance="@style/ButtonCorners" />

    <soup.neumorphism.NeumorphButton
        android:id="@+id/minusButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/minus"
        android:textAppearance="@style/forOperationButton"
        app:layout_constraintBottom_toTopOf="@+id/plusButton"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/endVerticalGuide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sixButton"
        app:layout_constraintTop_toBottomOf="@+id/multiplicationButton"
        app:neumorph_backgroundColor="@color/ButtonText"
        app:neumorph_shapeAppearance="@style/ButtonCorners" />

    <soup.neumorphism.NeumorphButton
        android:id="@+id/fiveButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/five"
        android:textAppearance="@style/forButton"
        app:layout_constraintBottom_toTopOf="@+id/twoButton"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/sixButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fourButton"
        app:layout_constraintTop_toBottomOf="@+id/eightButton"
        app:neumorph_shapeAppearance="@style/ButtonCorners" />

    <soup.neumorphism.NeumorphButton
        android:id="@+id/threeButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/three"
        android:textAppearance="@style/forButton"
        app:layout_constraintBottom_toTopOf="@+id/commaButton"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/plusButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/twoButton"
        app:layout_constraintTop_toBottomOf="@+id/sixButton"
        app:neumorph_shapeAppearance="@style/ButtonCorners" />

    <soup.neumorphism.NeumorphButton
        android:id="@+id/nineButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/nine"
        android:textAppearance="@style/forButton"
        app:layout_constraintBottom_toTopOf="@+id/sixButton"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/multiplicationButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/eightButton"
        app:layout_constraintTop_toBottomOf="@+id/percentButton"
        app:neumorph_shapeAppearance="@style/ButtonCorners" />

    <soup.neumorphism.NeumorphButton
        android:id="@+id/acButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:padding="0dp"
        android:text="@string/ac"
        android:textAppearance="@style/forButton"
        app:layout_constraintBottom_toTopOf="@+id/sevenButton"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toStartOf="@+id/plusminusButton"
        app:layout_constraintStart_toStartOf="@id/startVerticalGuide"
        app:layout_constraintTop_toBottomOf="@+id/rectangleView"
        app:neumorph_shapeAppearance="@style/ButtonCorners" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topHorizontalGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startVerticalGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endVerticalGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomHorizontalGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />

</androidx.constraintlayout.widget.ConstraintLayout>